tests/lean/t5.lean.expected.out
g : N → N
h : N
q : N
foo.h : N
t5.lean:13:6: error: unknown identifier 'q'
